ugh I should sleep

--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -103,12 +103,36 @@ Confidence Level is increased. This makes sense because............
 Are the observed counts consistent with the values predicted
 by the theory? Explain briefly.
 looks like you got some learnin to do....
+
 \section{}%2
+$$ H_0: \mu=64 \quad vs. \quad H_A: \mu \neq 64 $$
 
 \subsection{}%2a
 
+\begin{table}[H]
+ \centering
+ \begin{tabularx}{\textwidth}{|X|X|X|}
+  \hline
+  Level of Significance & Number of Samples That Led to the Rejection of $H_0$ & Observed Fraction of Samples \\ \hline
+  0.10                  & XXXX                                                 & XXXX                         \\ \hline
+  0.05                  & XXXX                                                 & XXXX                         \\ \hline
+  0.01                  & XXXX                                                 & XXXX                         \\ \hline
+ \end{tabularx}
+ \caption{My caption}
+ \label{2a}
+\end{table}
+
+How does the number of samples change as
+the level of significance increases? Explain briefly.
+
 \subsection{}%2b
 
+Write your null hypothesis. (SHould have a solid understanding of p-values for this)
+
+Compare the outcome of the test at the 5\% level of significance with the 95\% confidence intervals
+that failed to cover the mean of 64 for each sample. Repeat the exercise with the 1\% level of
+significance and the 99\% confidence intervals. What do you conclude about the relationship
+between confidence intervals and two-sided tests?
 \section{}%3
 
 \subsection{}%3a
