--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -137,6 +137,8 @@ between confidence intervals and two-sided tests?
 
 \section{}%3
 
+\subsection{}%3a
+
 \begin{table}[H]
  \centering
  \begin{tabular}{|c|c|}
@@ -208,31 +210,86 @@ between confidence intervals and two-sided tests?
  \label{3a3}
 \end{table}
 
-\subsection{}%3a
+Paste the summary statistics into your report and
+rep
+ort the 95\% confidence interval
+for each alloy. Use the summaries to compare the two alloys.
+Which of the two alloys has
+better strength qualities? Explain briefly.
 
 \subsection{}%3b
+According to the specifications, the mean strength of each alloy is required to exceed 64 ksi. Is
+there any indication that the mean strength of either alloy is below the required threshold value of
+64 ksi? Refe
+r to the 95\% confidence interval for each alloy to answer the question. Explain briefly.
 
 \section{}%4
-
+Do the data provide evidence that the mean strength of each alloy exceeds the
+threshold value of 64 ksi?  Now you will answer the question by carrying out the
+appr opriate statistical tests.
 \subsection{}%4a
+Carry out an appropriate test to check the above claim using the data for each
+alloy. In particular, state  the null and alternative hypotheses in terms of the
+population parameters, obtain the value of the test  statistic , specify the
+distribution of the test statistic under the null hypothesis, and obtain the  p
+- value of  the test. What do you conclude? Notice that as there is no
+appropriate feature in  Data Analysis to  carry out the test directly,  so  you
+will have to calc ulate the value of the test statistic and the  corresponding
+p - value by entering appropriate formulas into Excel worksheet.  Lab 3
+Instructions may  be useful in this part.
 
 \subsection{}%4b
+What are the assumptions about the distribution of strength required to make t
+he tests in part (a) valid?  Do the assumptions hold? Explain briefly. It is not
+required to verify the assumptions with Excel.
 
 \section{}%5
+In this part , you will compare the mean strength of ALLOY 1 and ALLOY 2 rods.
+Do the data provide  any evidence of a diffe rence in the mean strengths of
+ALLOY 1 and ALLOY 2 rods?
 
 \subsection{}%5a
+Answer the above question by carrying out the appropriate test in the Data
+Analysis menu. Before  you choose an appropriate test, you might refer to the
+output in Question  3 to decide  what test would be appropriate.  In particular,
+state the null and alternative hypotheses in terms of the  population
+parameters, obtain the value of the test statistic, specify the distribution of
+the test statistic  under the null hypothesis, and obtain the  p - value o f the
+test. What do you conclude?
 
 \subsection{}%5b
+What are the assumptions about the distribution of strength required to make the
+tests in part (a) valid?  Do the assumptions hold?  Explain briefly. It is not
+required to verify the assumptions with Excel.
 
 \section{}%6
+Th e  thirty  ALLOY  2  rods  were  subjected  to  a  combination  of  high
+pressure  and  temperature.  In  this  question , you will estimate the effect
+of the treatment on the mean strength of the rods.
 
 \subsection{}%6a
+Do the data provide evidence that the treatment increased the mean s trength of
+the ALLOY 2  rods? Answer the question by carrying out an appropriate test in
+Excel.  In particular, state  the null  and alternative hypotheses in terms of
+the population parameters, obtain the value of the test  statistic,  specify the
+distributio n of the test statistic under the null hypothesis, and obtain the  p
+- value of the test.  What do you conclude?
 
 \subsection{}%6b
+Use the  Descriptive Statistics feature in  the  Data Analysis menu to obtain a
+95\%  two - sided  confidence interval for the mean change in strength o f ALLOY
+2 rods after the treatment.   First create a new variable , EFFECT , defined as
+the difference in strength between ALLOY 2 + TREATMENT rods and ALLOY 2 rods. Is
+the interval consistent with the  test  outcome in part  (a)? Explain briefly.
 
 \subsection{}%6c
+What are the  assumptions necessary to make the test in part (a) and confidence
+interval in part (b)  valid?  Do the assumptions hold?  Explain briefly.
 
 \subsection{}%6d
+Is the effect of the treatment independent of the initial strength of the rods?
+In order to answer the  question, obtain the plot of the variable EFFECT versus
+ALLOY 2 measurements. What do you  conclude?
 
 % \begin{figure}[H]
 %  \centering
