--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -136,7 +136,7 @@ significance and the 99\% confidence intervals. What do you conclude about the r
 between confidence intervals and two-sided tests?
 
 \section{}%3
-
+Summary tables for Alloy 1 and 2, Calculate the Confidence intervals yourself.
 \subsection{}%3a
 
 \begin{table}[H]
@@ -210,18 +210,18 @@ between confidence intervals and two-sided tests?
  \label{3a3}
 \end{table}
 
-Paste the summary statistics into your report and
-rep
-ort the 95\% confidence interval
-for each alloy. Use the summaries to compare the two alloys.
-Which of the two alloys has
-better strength qualities? Explain briefly.
+Paste the summary statistics into your report and rep ort the 95\% confidence
+interval for each alloy. Use the summaries to compare the two alloys. Which of
+the two alloys has better strength qualities? Explain briefly.
 
 \subsection{}%3b
-According to the specifications, the mean strength of each alloy is required to exceed 64 ksi. Is
-there any indication that the mean strength of either alloy is below the required threshold value of
-64 ksi? Refe
-r to the 95\% confidence interval for each alloy to answer the question. Explain briefly.
+According to the specifications, the mean strength of each alloy is required to
+exceed 64 ksi. Is there any indication that the mean strength of either alloy is
+below the required threshold value of 64 ksi? Refe r to the 95\% confidence
+interval for each alloy to answer the question. Explain briefly.
+
+can be summarized in a few sentences -- keep it simple, does it exceed the
+threshold value?
 
 \section{}%4
 Do the data provide evidence that the mean strength of each alloy exceeds the
@@ -238,10 +238,15 @@ will have to calc ulate the value of the test statistic and the  corresponding
 p - value by entering appropriate formulas into Excel worksheet.  Lab 3
 Instructions may  be useful in this part.
 
+Show your work here. (This is where \LaTeX{} shines)
+
 \subsection{}%4b
 What are the assumptions about the distribution of strength required to make t
 he tests in part (a) valid?  Do the assumptions hold? Explain briefly. It is not
 required to verify the assumptions with Excel.
+
+What assumptions must be true for a t-test? Is there a theorem we covered that
+related to our normal distribution?
 
 \section{}%5
 In this part , you will compare the mean strength of ALLOY 1 and ALLOY 2 rods.
@@ -257,10 +262,15 @@ parameters, obtain the value of the test statistic, specify the distribution of
 the test statistic  under the null hypothesis, and obtain the  p - value o f the
 test. What do you conclude?
 
+Output: t-test output from Excel. For Hypotheses, is this one or 2 tailed?
+Choose the correct t-test.
+
 \subsection{}%5b
 What are the assumptions about the distribution of strength required to make the
 tests in part (a) valid?  Do the assumptions hold?  Explain briefly. It is not
 required to verify the assumptions with Excel.
+
+WHat are the assumptions for the t-test?
 
 \section{}%6
 Th e  thirty  ALLOY  2  rods  were  subjected  to  a  combination  of  high
@@ -275,6 +285,8 @@ the population parameters, obtain the value of the test  statistic,  specify the
 distributio n of the test statistic under the null hypothesis, and obtain the  p
 - value of the test.  What do you conclude?
 
+t-test output from excel. CHoose t-test carefully
+
 \subsection{}%6b
 Use the  Descriptive Statistics feature in  the  Data Analysis menu to obtain a
 95\%  two - sided  confidence interval for the mean change in strength o f ALLOY
@@ -282,14 +294,23 @@ Use the  Descriptive Statistics feature in  the  Data Analysis menu to obtain a
 the difference in strength between ALLOY 2 + TREATMENT rods and ALLOY 2 rods. Is
 the interval consistent with the  test  outcome in part  (a)? Explain briefly.
 
+paste summary statistics from excel
+
 \subsection{}%6c
 What are the  assumptions necessary to make the test in part (a) and confidence
 interval in part (b)  valid?  Do the assumptions hold?  Explain briefly.
+
+what are the assumptions for a t-test? Is there a theorem we touched on earlier
+that relates to the normal distribution?
 
 \subsection{}%6d
 Is the effect of the treatment independent of the initial strength of the rods?
 In order to answer the  question, obtain the plot of the variable EFFECT versus
 ALLOY 2 measurements. What do you  conclude?
+
+Output: Change in strength vs Scatter plot of Alloy 2 strength.
+Remember to put the response on the y-axis. All relationships have
+error, look at the middle data cloud to determine shape.
 
 % \begin{figure}[H]
 %  \centering
