--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -303,7 +303,7 @@ parameters, obtain the value of the test statistic, specify the distribution of
 the test statistic  under the null hypothesis, and obtain the  p - value o f the
 test. What do you conclude?
 
-$$H_0: \mu  \quad vs. \quad H_A: \mu  $$
+$$H_0: \mu_1 - \mu_2 =0  \quad vs. \quad H_A: \mu_1 - \mu_2 \neq 0  $$
 
 $$t_0 =$$
 
@@ -343,7 +343,7 @@ the population parameters, obtain the value of the test  statistic,  specify the
 distributio n of the test statistic under the null hypothesis, and obtain the  p
 - value of the test.  What do you conclude?
 
-$$H_0: \mu  \quad vs. \quad H_A: \mu  $$
+$$H_0: \mu_1 = \mu_2  \quad vs. \quad H_A: \mu_1 \neq \mu_2  $$
 
 $$t_0 =$$
 
