--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -180,6 +180,9 @@ Summary tables for Alloy 1 and 2, Calculate the Confidence intervals yourself.
  \label{3a1}
 \end{table}
 
+The confidence interval is calculated as follows:
+$$65.09 \pm 0.738287948 \approx (64.352, 65.828)$$
+
 \begin{table}[H]
  \centering
  \begin{tabular}{|c|c|}
@@ -202,6 +205,9 @@ Summary tables for Alloy 1 and 2, Calculate the Confidence intervals yourself.
  \caption{My caption}
  \label{3a2}
 \end{table}
+
+The confidence interval is calculated as follows:
+$$65.27333333 \pm 0.342784524 \approx (64.931, 65.616)$$
 
 % \begin{table}[H]
 %  \centering
