numero uno finalized

--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -83,7 +83,8 @@ Keeping other parameters constant, changing the confidence level yields the folo
 % How does the margin of
 % error change as the confidence interval increases? Explain briefly.
 As seen in Table \ref{1a} above, the Margin of Error increases as the
-Confidence Level is increased. This makes sense because............
+Confidence Level is increased. This makes sense because the margin of error depends on the z value, which increases as $(1-\alpha)$ increases.
+
 
 
 \subsection{}%1b
