--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -234,22 +234,31 @@ $$65.27333333 \pm 0.342784524 \approx (64.931, 65.616)$$
 %  \label{3a3}
 % \end{table}
 
-Paste the summary statistics into your report and rep ort the 95\% confidence
-interval for each alloy. Use the summaries to compare the two alloys. Which of
-the two alloys has better strength qualities? Explain briefly.\\
+% Paste the summary statistics into your report and rep ort the 95\% confidence
+% interval for each alloy. Use the summaries to compare the two alloys. Which of
+% the two alloys has better strength qualities? Explain briefly.\\
 
-Alloy 1 appears to have better strength qualities because it has a higher confidence level?
+Alloy 2 appears to be stronger, since it has a higher mean, median and mode
+compared to Alloy 1.
+% It can also be noted that the confidence interval for
+% Alloy 2 is contained within the confidence interval of Alloy 1, which means
+% that more data points for Alloy 1 can be found at lower value
 
 \subsection{}%3b
-According to the specifications, the mean strength of each alloy is required to
-exceed 64 ksi. Is there any indication that the mean strength of either alloy is
-below the required threshold value of 64 ksi? Refe r to the 95\% confidence
-interval for each alloy to answer the question. Explain briefly.
+% According to the specifications, the mean strength of each alloy is required to
+% exceed 64 ksi. Is there any indication that the mean strength of either alloy is
+% below the required threshold value of 64 ksi? Refe r to the 95\% confidence
+% interval for each alloy to answer the question. Explain briefly.
+%
+% can be summarized in a few sentences -- keep it simple, does it exceed the
+% threshold value?\\
+%
+% Nah I don't think so
 
-can be summarized in a few sentences -- keep it simple, does it exceed the
-threshold value?\\
-
-Nah I don't think so
+For both of the alloys, there isn't any strong evidence that the mean strength
+is below the required threshold value of 64. For both of the 95\% confidence
+intervals, the lower bound is above 64, so the chance for a mean strength below
+64 is low.
 
 \section{}%4
 Do the data provide evidence that the mean strength of each alloy exceeds the
