--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -278,11 +278,12 @@ Instructions may  be useful in this part.
 Show your work here. (This is where \LaTeX{} shines)
 $$H_0: \mu \leq 64 \quad vs. \quad H_A: \mu > 64 $$
 
-$$t_0 = \frac{\bar{x}-\mu}{s/\sqrt{n}} = XX \sim t_{x,x}$$
+$$t_0 = \frac{\bar{x}-\mu_0}{s/\sqrt{n}} = \frac{65.09 - 64}{1.977171438/\sqrt{30}} =  3.019553976 \sim t_{29}$$
 
-$$ {p-value}: XX $$
+$$ {p-value}: 1-pt(3.019553976, df=29) = 0.0026185 $$
 
-We reject $H_0$ because...
+We reject $H_0$ because the p-value obtained is extremely low. i.e., the data
+suggests that Alloy 1 exceeds the threshold value of 64.
 
 
 \subsection{}%4b
